--- a/src/index.ejs
+++ b/src/index.ejs
@@ -14,7 +14,23 @@
 </head>
 
 <body>
-  <main>
+  
+     <!-- ai2html -->
+     <section class="ai2html">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-12" style="margin: 0; padding: 0">
+              <!-- This is the line that matters for import -->
+              <%- include('./ai2html-output/ai2html-test.ejs'); %>
+            </div>
+          </div>
+        </div>
+      </section>
+
+
+
+  
+    <main>
     <article>
         <div class="container mb-1">
           <div class="d-flex row align-items-end" >
